# LoreBound

./: ANTI_CHEAT_ADJUSTMENT.md  API_DOCUMENTATION.md  AUTHENTICATION_SETUP.md  BACKEND_SUBMISSION_FIX.md  COMPACT_UI_FIXES.md  CONTENT_ENDPOINTS_STATUS.md  DEBUG_WHITE_SCREEN.md  DUNGEON_SELECT_UI_RESTORED.md  Dockerfile  FILE_GUIDE.md  FINAL_INTEGRATION_FIXES.md  Makefile  NAVIGATION_FIX.md  QUICK_SEEDING_REFERENCE.md  README.md  SCORING_VALIDATION_FIX.md  SERVICES_OVERVIEW.md  TEAMMATE_TESTING_GUIDE.md  TODAYS_ACCOMPLISHMENTS.md  TODAYS_CHANGES_SUMMARY.md  TROUBLESHOOTING_DUNGEONS.md  alembic.ini  package-lock.json  package.json  test_integration.ps1
lorebound-backend/: .env  Dockerfile  EMAIL_VALIDATION_FIX.md  Makefile  README.md  alembic.ini  docker-compose.yml  pyproject.toml
lorebound-backend/app/: __init__.py  main.py
lorebound-backend/app/core/: __init__.py  config.py  dependencies.py  logging.py  redis_client.py  security.py
lorebound-backend/app/domain/: __init__.py  enums.py  models.py
lorebound-backend/app/jobs/: __init__.py  celery_beat_schedule.py  worker.py
lorebound-backend/app/repositories/: __init__.py  base.py  content_repo.py  inventory_repo.py  leaderboard_repo.py  run_repo.py  user_repo.py
lorebound-backend/app/schemas/: __init__.py  auth.py  auth_alternative.py  config.py  content.py  email_validation.py  inventory.py  leaderboard.py  run.py  user.py
lorebound-backend/app/services/: __init__.py  apple_service.py  auth_service.py  content_service.py  dependencies.py  exceptions.py  inventory_service.py  leaderboard_service.py  profile_service.py  run_service.py  trivia_api_client.py
lorebound-backend/migrations/: env.py  script.py.mako
lorebound-backend/migrations/versions/: 326c0b57e543_initial_migration.py  add_run_fields.py  reduce_handle_length_to_15.py
lorebound-backend/scripts/: README.md  __init__.py  add_new_dungeons.py  add_test_items_to_user.py  admin_seed_data.py  check_api_status.py  check_questions.py  clear_and_repopulate.py  complete_auth_demo.py  create_missing_profiles.py  create_test_items.py  create_test_items.sql  debug_registration.py  direct_api_test.py  final_validation.py  generate_jwt_keys.py  give_all_items_to_user.py  give_base_items.py  populate_questions.py  seed_content_data.py  seed_data.sql  seed_items.py  seed_once.py  seed_questions_simple.py  simple_test_refresh.py  test_api_endpoints.py  test_app_startup.py  test_content_endpoints.py  test_daily_challenge.py  test_database_constraints.py  test_email_fix.py  test_email_validation.py  test_features.py  test_fixed.py  test_live_api.py  test_protected_endpoint.py  test_question_variety.py  test_registration.py  test_services.py  test_trivia_api.py  (+4 more)
lorebound-backend/scripts/admin/: __init__.py  add_new_dungeons.py  add_test_items_to_user.py  check_api_status.py  check_questions.py  create_test_items.py
lorebound-backend/scripts/seeding/: __init__.py  (+7 more)
lorebound-backend/secrets/: apple_key.p8  apple_signin_key.p8  jwt_private.pem  jwt_public.pem
lorebound-backend/tests/: README.md  TEST_SUITE_SUMMARY.md  __init__.py  conftest.py  conftest_complex.py.bak  conftest_simple.py  pytest.ini  run_test_suite.py  run_tests.py  test_auth.py  test_content.py  test_health.py  test_integration.py  test_services.py  test_simple.py
(+242 files in other folders)
